--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,10 @@
 [status]
+grabarpantalla = 1
 vergrabacion = 1
 fps = 15
-monitorindex = 0
-languagerec = es-ES
+langindex = 0
+languagerec = es-MX
 cliplength = 10
 indexformat = 0
+guardargrabacion = 0
 
