--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "python.pythonPath": ".\\env\\Scripts\\python.exe"
+    "python.pythonPath": ".\\env\\Scripts\\python.exe",
+    "cSpell.words": [
+        "jarvis",
+        "xbox",
+        "yarbis",
+        "yarbiss",
+        "yarvis",
+        "yarviss"
+    ]
 }
